# kb-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.ja.md  README.md  kb-mcp.toml.example
.claude/commands/: codex-review.md  feature-flow.md
.github/workflows/: ci.yml  nightly.yml
.pair/: PLAN.md
benches/: index_throughput.rs
crates/kb-mcp-svc/: Cargo.toml
crates/kb-mcp-svc/src/: main.rs
crates/kb-mcp-tray/: Cargo.toml  build.rs
crates/kb-mcp-tray/src/: cli.rs  config.rs  daemon.rs  install.rs  lib.rs  logger.rs  main.rs  poll.rs  state.rs  tray.rs  ui.rs
crates/kb-mcp-tray/tests/: install_integration.rs
docs/: ARCHITECTURE.ja.md  ARCHITECTURE.md  perf-instrumentation.md
examples/deployments/: README.md
kb-mcp/: Cargo.toml  kb-mcp-schema.toml.example  kb-mcp.toml.example
kb-mcp/benches/: mmr_perf.rs  search_latency.rs  string_ops.rs
kb-mcp/examples/: mcp.json
kb-mcp/examples/deployments/: README.ja.md
kb-mcp/examples/deployments/intranet-http/: .mcp.json  README.ja.md  README.md  kb-mcp.service  kb-mcp.toml
kb-mcp/examples/deployments/nas-shared/: .mcp.json  README.ja.md  README.md  kb-mcp.toml.client  kb-mcp.toml.indexer
kb-mcp/examples/deployments/personal/: .mcp.json  README.ja.md  README.md  kb-mcp.toml
kb-mcp/examples/hooks/: README.ja.md  README.md  rebuild-on-edit.sh  settings.snippet.json
kb-mcp/src/: config.rs  db.rs  document_index.rs  embedder.rs  eval.rs  graph.rs  indexer.rs  lib.rs  main.rs  markdown.rs  mmr.rs  quality.rs  schema.rs  server.rs  timing.rs  watcher.rs
kb-mcp/src/indexer/: progress.rs
kb-mcp/src/parser/: markdown.rs  mod.rs  registry.rs  txt.rs
kb-mcp/src/service/: install.rs  linux.rs  status.rs  uninstall.rs  windows.rs
kb-mcp/src/transport/: http.rs  mod.rs  stdio.rs  webui_index.html
kb-mcp/tests/: common_helpers.rs  config_discovery.rs  document_index_integration.rs  eval_cli.rs  http_transport.rs  index_progress_cli.rs  parser_level_smoke.rs  search_carry_doc_id.rs  search_cli.rs  search_mmr_integration.rs  validate_cli.rs
kb-mcp/tests/common/: mcp.rs  temp.rs
kb-mcp/tests/fixtures/: no_frontmatter.md  sample.md
kb-mcp/tests/fixtures/kb-bench/: mcp-protocol.md  rust-async.md  sqlite-vec.md
kb-mcp/tests/fixtures/kb-small/: getting-started.ja.md
src/: db.rs  indexer.rs  lib.rs  main.rs  parent.rs  server.rs  watcher.rs
src/service/: install.rs  macos.rs  mod.rs  uninstall.rs  windows.rs
src/transport/: http.rs
tests/: index_progress_cli.rs  kb_small_smoke.rs  search_parent_integration.rs  service_install_integration.rs  watcher_e2e.rs  webui_integration.rs
tests/common/: ansi.rs  mcp.rs  mod.rs
tests/fixtures/kb-small/: architecture.md  intro.md  legacy.md  notes.md  troubleshooting.ja.md
