[package]
name = "kb-mcp"
version = "0.9.0"
edition = "2024"
description = "MCP server providing semantic hybrid search (sqlite-vec + FTS5 with optional cross-encoder reranking) over a Markdown / plain-text knowledge base."
authors = ["koshian"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/alphabet-h/kb-mcp"
homepage = "https://github.com/alphabet-h/kb-mcp"
# README は repo root に残してある (= GitHub の repo home で表示される)。
# workspace 化 (feature-44 PR-1) でこの Cargo.toml は kb-mcp/ に動いたので、
# crates.io publish / cargo package validation が見れるよう relative path で
# 上 1 階層を指す (= codex P2 round 2 on PR #61)。
readme = "../README.md"
keywords = ["mcp", "rag", "search", "embedding", "sqlite-vec"]
categories = ["command-line-utilities", "database", "text-processing"]

[dependencies]
rmcp = { version = "1", features = ["server", "transport-io", "transport-streamable-http-server", "macros"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
# [D-11 / feature-39] /healthz Host validation を `http::uri::Authority::try_from`
# 委譲に refactor するため direct dep 宣言。axum 0.8 transitive で既に v1.4.0 が
# 入っているので追加コストなし。
http = "1"
fastembed = "5"
rusqlite = { version = "0.39", features = ["bundled"] }
sqlite-vec = "0.1"
pulldown-cmark = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_bw = "2"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
chrono = "0.4"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
dirs = "6"
# [feature 17] frontmatter スキーマ検証の pattern フィールド用
regex = "1"
# [feature 12] file watcher + debouncer。rename を from/to ペアとして拾える
# notify-debouncer-full を採用。notify 本体は transitive で取り込まれる。
notify = "8"
notify-debouncer-full = "0.6"
# [feature 26] path_globs filter 用
globset = "0.4"
# [feature 27] config discovery: cross-platform `~` 展開
shellexpand = "3"
# [feature-31] f32x8 SIMD kernel for mmr::cosine_similarity (pure-rust, ~50 KB)。
# `From<[f32; 8]>` のみ実装、`From<&[f32]>` は無いので [f32; 8] buffer 経由で構築する。
wide = "0.7"
# [feature-42 / D-10] Progress bar for `kb-mcp index --progress` (TTY) +
# IsTerminal-aware fallback for non-TTY (pipe / harness). MSRV 1.70 per cargo info.
indicatif = "0.18"

# (feature-44 PR-3) Windows-only path dep on the tray crate so
# `kb-mcp service install --with-tray` can call into the tray's
# shell:startup shortcut installer. Library API only — the
# `kb-mcp-tray.exe` binary is shipped separately via cargo-dist.
[target.'cfg(windows)'.dependencies]
kb-mcp-tray = { path = "../crates/kb-mcp-tray" }

[features]
# Reranker (~2.3 GB) を要求する bench を default 起動から除外する gate。
# `cargo bench --features heavy-bench --bench search_latency` で reranker bench fn が
# compile + 実行される (criterion 0.5 には #[ignore] 機構がないため Cargo feature で gate)。
heavy-bench = []
# (feature-43 PR-2) `KbServerShared::for_test` などの test-only constructor を
# integration test crate (= tests/*.rs) から参照可能にする gate。
# `#[cfg(test)]` は lib 内 test にしか効かないため、tests/ 配下から触りたい
# helper は feature flag を立てる必要がある。default off (production には載らない)。
test-helpers = []

[dev-dependencies]
# Property-based testing for f64 invariant guards (recall_at_k / ndcg_at_k /
# chunk_quality_score の値域 [0.0, 1.0] を proptest で固定)。
proptest = "1"
# F-64 (feature-38): /healthz middleware の unit test (= ServiceExt::oneshot
# で Router を 1 リクエスト処理) 用。axum 0.8 の transitive 経由で workspace
# に存在するが、direct dep 宣言なしで `use tower::...` するのは resolver = "2"
# 配下で warning / 不安定なので direct dep 宣言する。
tower = { version = "0.5", features = ["util"] }
# [F-39 PR-B] criterion-based benchmarking infrastructure. The benches under
# `benches/` call into the lib crate (and subprocess where needed), since the
# lib surface is intentionally unstable (see src/lib.rs).
# `default-features = false` skips the `rayon`-driven HTML report machinery,
# trading ~30s of compile time per first build for (no HTML; we already use
# the JSON output for trend tracking).
criterion = { version = "0.5", default-features = false }

# Each `[[bench]]` entry below MUST set `harness = false` because criterion
# brings its own harness. `name` matches the file under `benches/`.
[[bench]]
name = "string_ops"
harness = false

# F-60 PR-1: MMR microbench (lib.rs 経由で kb_mcp::mmr::mmr_select を直接叩く)
[[bench]]
name = "mmr_perf"
harness = false

# F-60 PR-1: search latency subprocess bench. reranker bench は heavy-bench feature gate
[[bench]]
name = "search_latency"
harness = false

# F-60 PR-2 (Cycle C / feature-37): chunker / chunker+embedder throughput.
# chunker only fn = default。chunker+embedder fn = heavy-bench feature gate (model DL ~130 MB)。
[[bench]]
name = "index_throughput"
harness = false

