[package]
name = "kb-mcp-svc"
version = "0.9.1"
edition = "2024"
description = "Windows hidden-console launcher for kb-mcp.exe serve (v0.9.1 hot-fix for visible terminal window via Task Scheduler)"
authors = ["koshian"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/alphabet-h/kb-mcp"
homepage = "https://github.com/alphabet-h/kb-mcp"
# Internal crate (= used only as a child binary in the Windows Task Scheduler
# Action). publish = false avoids the crates.io readme/metadata validation.
publish = false

# cargo-dist per-crate target gating: kb-mcp-svc.exe is Windows-only because its
# entire purpose is to side-step Windows' console subsystem allocation. The
# Linux / macOS build path is a fail-fast stub (`fn main()` exits 1) so the
# crate compiles cleanly on all hosts but only ships in the Windows zip.
[package.metadata.dist]
targets = ["x86_64-pc-windows-msvc"]

[[bin]]
name = "kb-mcp-svc"
path = "src/main.rs"
