[package]
name = "kb-mcp-tray"
version = "0.9.0"
edition = "2024"
description = "Windows system tray monitor for kb-mcp daemon (Phase 2 of F-6/H-9)"
authors = ["koshian"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/alphabet-h/kb-mcp"
homepage = "https://github.com/alphabet-h/kb-mcp"
# NOTE (codex P2 round 3 on PR #61): `publish = false` の internal crate なので
# readme field は不要。crates/kb-mcp-tray/README.md は存在せず metadata
# validation が fail するため削除。
publish = false

# cargo-dist per-crate target gating: kb-mcp-tray.exe is Windows-only, so we
# narrow the dist matrix to a single target. The main `kb-mcp` crate inherits
# the workspace-wide target list (= 4 targets) from dist-workspace.toml.
[package.metadata.dist]
targets = ["x86_64-pc-windows-msvc"]

[[bin]]
name = "kb-mcp-tray"
path = "src/main.rs"

[lib]
name = "kb_mcp_tray"
path = "src/lib.rs"

# Windows-only runtime dependencies. The non-Windows build path is a fail-fast
# stub (see src/main.rs) so these deps are not compiled on Linux/macOS.
[target.'cfg(windows)'.dependencies]
tray-icon = "0.24"
tao = "0.35"
image = "0.25"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
anyhow = "1"
toml = "0.8"

# NOTE (codex P1 round 1 on PR #61): keep `winresource` as an unconditional
# build-dep. Restricting it to `[target.'cfg(windows)'.build-dependencies]`
# breaks `cargo check/test --workspace` on Linux/macOS because Rust still
# compiles build.rs and resolves the `winresource::WindowsResource` path
# before the runtime CARGO_CFG_TARGET_OS branch can skip it. The crate is
# usable on all hosts (it generates Windows resources via cross-compilation).
[build-dependencies]
winresource = "0.1"
